--- a/NEDC 2020.2021 SW/platformio.ini
+++ b/NEDC 2020.2021 SW/platformio.ini
@@ -12,4 +12,4 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = bitbucket-fmalpartida/LiquidCrystal@^1.5.0, Wire
+lib_deps = Wire
