--- a/NEDC 2020.2021 SW/platformio.ini
+++ b/NEDC 2020.2021 SW/platformio.ini
@@ -12,4 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = Wire
+lib_deps = 
+	Wire
+	adafruit/Adafruit Unified Sensor@^1.1.4
+	adafruit/DHT sensor library@^1.4.1
